Fixed contact form animation positioning when the user is not at the top of body. Also toggling overflow-hidden once the modal is opened and added the Sherlock Holmes easter egg if the user visits the modal window more than 2 times.

--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -77,46 +77,14 @@ svg g{
   color: #111;
   transform: translate3d(0, 0, 0);
 }
-.btn:focus >span:nth-child(1),
-.btn:hover > span:nth-child(1) {
-  transition-delay: 0.045s;
+
+@for $i from 1 through 10{
+  .btn:focus > span:nth-child(#{$i}),
+  .btn:hover > span:nth-child(#{$i}){
+    transition-delay: unquote($i * 0.045 + "s");
+  }
 }
-.btn:focus >span:nth-child(2),
-.btn:hover > span:nth-child(2) {
-  transition-delay: 0.09s;
-}
-.btn:focus >span:nth-child(3),
-.btn:hover > span:nth-child(3) {
-  transition-delay: 0.135s;
-}
-.btn:focus >span:nth-child(4),
-.btn:hover > span:nth-child(4) {
-  transition-delay: 0.18s;
-}
-.btn:focus >span:nth-child(5),
-.btn:hover > span:nth-child(5) {
-  transition-delay: 0.225s;
-}
-.btn:focus >span:nth-child(6),
-.btn:hover > span:nth-child(6) {
-  transition-delay: 0.27s;
-}
-.btn:focus >span:nth-child(7),
-.btn:hover > span:nth-child(7) {
-  transition-delay: 0.315s;
-}
-.btn:focus >span:nth-child(8),
-.btn:hover > span:nth-child(8) {
-  transition-delay: 0.36s;
-}
-.btn:focus >span:nth-child(9),
-.btn:hover > span:nth-child(9) {
-  transition-delay: 0.405s;
-}
-.btn:focus >span:nth-child(10),
-.btn:hover > span:nth-child(10) {
-  transition-delay: 0.45s;
-}
+
 .btn-secondary {
   margin: 1em 0;
   color: #222;
