--- a/src/scss/components/_global.scss
+++ b/src/scss/components/_global.scss
@@ -34,6 +34,10 @@ input:focus::-ms-input-placeholder {
   color: rgba(255,255,255,0.2);
 }
 
+.overflow-hidden{
+  overflow:hidden;
+}
+
 .section {
   text-align: center;
 }
